[build-system]
requires = ["setuptools>=61.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writhe_tools"
version = "0.0.6"
description = "A high-performance Python package for computing the geometric descriptor writhe from 3D coordinate data."
authors = [
    { name = "Thomas Sisk", email = "Thomas.r.Sisk.gr@dartmouth.edu" }
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.7, <3.11"
dependencies = [
    "numpy",  # Allow updates within major version 1.x
    "ray>=2.5.1",      # Allow updates within major version 2.x
    "matplotlib>=3.5.1",  # Allow updates within major version 3.x
    "torch>=2.0.1",  # Allow minor updates but restrict major changes
    "numpy_indexed>=0.3.7", # Allow updates within major version 0.x
    "joblib>=1.1.0",   # Allow updates within major version 1.x
     "numba>=0.55.0",# Allow updates within major version 2.x
                ]

[project.optional-dependencies]

graph = [
    "torch-geometric>=2.3.1,<3.0",
    "tensorboard>=2.13.0,<3.0", # Allow updates within major version 2.x
    "torch-scatter>=2.1.1,<3.0",   # Allow updates within major version 2.x
    "pytorch_lightning>=2.0.9.post0,<3.0", # Allow updates within major version 2.x
    "tqdm>=4.63.0,<5.0",    # Allow updates within major version 4.x
        ]

mdtraj = [
    "mdtraj>=1.9.5,<2.0",
         ]

stats = [
    "pyblock>=0.6,<1.0",
    "dask>=2022.2.1,<2024.0.0",
    "deeptime>=0.4.1,<1.0",
    'scipy>=1.9.0',
    'scikit-learn>=1.5.0',
        ]

dev = [
    "pytest>=6.0.0,<8.0.0",  # Allow updates within major version 6.x to 7.x
    "black>=22.0.0,<24.0.0",  # Allow updates until 2024 major changes
    "flake8>=4.0.0,<6.0.0"    # Allow updates within major version 4.x to 5.x
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[project.urls]
Homepage='https://github.com/tommysisk/Writhe_Paper'


