[build-system]
requires = ["setuptools>=61.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writhe_tools"
version = "0.0.15"
description = "A high-performance Python package for computing the geometric descriptor writhe from 3D coordinate data."
authors = [
    { name = "Thomas Sisk", email = "Thomas.r.Sisk.gr@dartmouth.edu" }
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.7, <3.11"
dependencies = [
    "numpy>=1.22.4,<2.0",
    "ray>=2.5.1",
    "matplotlib>=3.5.1",
    "torch>=2.0.1",
    "numpy_indexed>=0.3.7",
    "joblib>=1.1.0",
    "numba>=0.55.0"
]

[project.optional-dependencies]
cuda11 = [
    "numpy>=1.22.4,<2.0",
    "ray>=2.5.1,<3.0",
    "matplotlib>=3.5.1,<4.0",
    "torch>=2.0.1,<2.1.0",
    "numpy_indexed>=0.3.7,<1.0",
    "joblib>=1.1.0,<2.0",
    "numba>=0.55.0,<0.61.0",
    ]

cuda11_graph = [
    "numpy>=1.22.4,<2.0",
    "ray>=2.5.1,<3.0",
    "matplotlib>=3.5.1,<4.0",
    "torch>=2.0.1,<2.1.0",
    "numpy_indexed>=0.3.7,<1.0",
    "joblib>=1.1.0,<2.0",
    "numba>=0.55.0,<0.61.0",
    "tqdm>=4.63.0,<5.0",
    "pytorch_lightning<=2.0.9.post0",
    "torch-geometric>=2.3.1,<3.0",
    "tensorboard>=2.13.0,<3.0",

]

graph = [
    "torch-geometric>=2.3.1,<3.0",
    "tensorboard>=2.13.0,<3.0",
    "torch-scatter>=2.1.1,<3.0",
    "pytorch_lightning>=2.0.9.post0,<3.0",
    "tqdm>=4.63.0,<5.0"
]

mdtraj = [
    "mdtraj>=1.9.5,<2.0"
]

stats = [
    "pyblock>=0.6",
    "dask>=2022.2.1",
    "deeptime>=0.4.1",
    "scipy>=1.9.0",
    "scikit-learn>=1.5.0"
]

dev = [
    "pytest>=6.0.0,<8.0.0",
    "black>=22.0.0,<24.0.0",
    "flake8>=4.0.0,<6.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/tommysisk/Writhe_Paper"
